--- a/config/editor.editor.rich_text.yml
+++ b/config/editor.editor.rich_text.yml
@@ -14,6 +14,8 @@ settings:
   toolbar:
     items:
       - heading
+      - undo
+      - redo
       - bold
       - italic
       - underline
@@ -31,6 +33,7 @@ settings:
       - insertTable
       - codeBlock
       - mediaEmbed
+      - sourceEditing
   plugins:
     ckeditor5_heading:
       enabled_headings:
@@ -39,6 +42,19 @@ settings:
         - heading4
         - heading5
         - heading6
+    ckeditor5_sourceEditing:
+      allowed_tags: {  }
+    ckeditor5_list:
+      reversed: true
+      startIndex: true
+    ckeditor5_alignment:
+      enabled_alignments:
+        - left
+        - center
+        - right
+        - justify
+    ckeditor5_imageResize:
+      allow_resize: true
 image_upload:
   status: true
   scheme: public
