--- a/config/core.extension.yml
+++ b/config/core.extension.yml
@@ -1,6 +1,7 @@
 _core:
   default_config_hash: R4IF-ClDHXxblLcG0L7MgsLvfBIMAvi_skumNFQwkDc
 module:
+  aggregator: 0
   allowed_formats: 0
   big_pipe: 0
   block: 0
@@ -14,6 +15,7 @@ module:
   bookish_speed: 0
   bookish_tags: 0
   bookish_toolbar: 0
+  bookish_yaml: 0
   breakpoint: 0
   ckeditor: 0
   ckeditor5: 0
@@ -23,6 +25,7 @@ module:
   config: 0
   contact: 0
   ctools: 0
+  ctools_entity_mask: 0
   datetime: 0
   dblog: 0
   dynamic_page_cache: 0
@@ -40,8 +43,14 @@ module:
   menu_link_content: 0
   menu_ui: 0
   metatag: 0
+  metatag_facebook: 0
+  metatag_favicons: 0
+  metatag_google_cse: 0
+  metatag_hreflang: 0
+  metatag_mobile: 0
   metatag_open_graph: 0
   metatag_twitter_cards: 0
+  metatag_verification: 0
   node: 0
   options: 0
   page_cache: 0
@@ -50,14 +59,18 @@ module:
   rdf: 0
   serialization: 0
   sfc: 0
+  sfc_dev: 0
+  sfc_example: 0
   shortcut: 0
   simple_sitemap: 0
+  simple_sitemap_engines: 0
   system: 0
   taxonomy: 0
   text: 0
   token: 0
   tome: 0
   tome_base: 0
+  tome_netlify: 0
   tome_netlify_contact: 0
   tome_static: 0
   tome_sync: 0
