--- a/config/filter.format.rich_text.yml
+++ b/config/filter.format.rich_text.yml
@@ -17,10 +17,10 @@ filters:
   filter_html:
     id: filter_html
     provider: filter
-    status: true
+    status: false
     weight: -50
     settings:
-      allowed_html: '<code class> <pre class="text-align-left text-align-center text-align-right text-align-justify"> <iframe srcdoc sandbox src style frameborder allow allowfullscreen width height> <div class style data-oembed-url> <figure class> <oembed url> <img data-bookish-image-style src alt data-entity-uuid data-entity-type height width data-caption data-align> <br> <p class="text-align-left text-align-center text-align-right text-align-justify"> <h2 class="text-align-left text-align-center text-align-right text-align-justify"> <h3 class="text-align-left text-align-center text-align-right text-align-justify"> <h4 class="text-align-left text-align-center text-align-right text-align-justify"> <h5 class="text-align-left text-align-center text-align-right text-align-justify"> <h6 class="text-align-left text-align-center text-align-right text-align-justify"> <strong> <em> <u> <s> <blockquote class="text-align-left text-align-center text-align-right text-align-justify"> <a href> <ul class="text-align-left text-align-center text-align-right text-align-justify"> <ol class="text-align-left text-align-center text-align-right text-align-justify"> <li> <hr class="text-align-left text-align-center text-align-right text-align-justify"> <table class="text-align-left text-align-center text-align-right text-align-justify"> <tr> <td> <th> <thead> <tbody> <tfoot class="text-align-left text-align-center text-align-right text-align-justify">'
+      allowed_html: ''
       filter_html_help: true
       filter_html_nofollow: false
   editor_file_reference:
