tambah socialshare dan modif themme

--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -2,9 +2,9 @@ _core:
   default_config_hash: RePADAH4yHzDAKh-gEsDxPFK9hQe32l4p4t8Cqryww8
 langcode: en
 uuid: 58e7df58-ed88-4707-aa9d-ce28f611b8ad
-name: 'Tome Template'
+name: 'Andy Yulianto'
 mail: admin@example.com
-slogan: 'A blogging profile for Tome users'
+slogan: 'A blogging profile dari Andy'
 page:
   403: /403
   404: /404
