--- a/config/system.site.yml
+++ b/config/system.site.yml
@@ -4,7 +4,7 @@ langcode: en
 uuid: 58e7df58-ed88-4707-aa9d-ce28f611b8ad
 name: 'Andy Yulianto'
 mail: admin@example.com
-slogan: 'A blogging profile dari Andy'
+slogan: 'Blog Andy Tanpa Kompromi'
 page:
   403: /403
   404: /404
